# ChangeLog for media-libs/SoQt
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/SoQt/ChangeLog,v 1.19 2008/12/15 19:05:06 angelos Exp $

  15 Dec 2008; Christoph Mende <angelos@gentoo.org> SoQt-1.0.2.ebuild,
  SoQt-1.3.0.ebuild, SoQt-1.4.1.ebuild:
  QA: Shortened description, removed unneeded inherit eutils, use emake
  instead of make, added die to emake, quoted $D, removed $ROOT from
  src_compile, removed LICENSE.GPL and COPYING from dodoc

*SoQt-1.4.1 (21 Oct 2007)

  21 Oct 2007; Carsten Lohrke <carlo@gentoo.org> +SoQt-1.4.1.ebuild:
  Version bump.

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  02 Dec 2006; Steve Dibb <beandog@gentoo.org> SoQt-1.3.0.ebuild:
  Add ~amd64, bug 117756

  17 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> SoQt-1.0.2.ebuild:
  Taking back sparc keyword wrt #117756

  19 Jan 2006; Caleb Tennis <caleb@gentoo.org> SoQt-1.0.2.ebuild:
  Fix Qt dep and remove X11 deps to help with the modular X

  04 Jan 2006; Carsten Lohrke <carlo@gentoo.org> SoQt-1.3.0.ebuild:
  RDEPEND missed an R...

*SoQt-1.3.0 (04 Jan 2006)

  04 Jan 2006; Carsten Lohrke <carlo@gentoo.org> SoQt-1.0.2.ebuild,
  +SoQt-1.3.0.ebuild:
  version bump

  04 Jan 2006; Carsten Lohrke <carlo@gentoo.org> SoQt-1.0.2.ebuild:
  Correct license information.

  05 Nov 2005; Luis Medinas <metalgod@gentoo.org> SoQt-1.0.2.ebuild:
  Added ~amd64 keyword.

  21 Jul 2005; Caleb Tennis <caleb@gentoo.org> SoQt-1.0.2.ebuild:
  Change qt dep per bug #98180

  06 May 2005; Sven Wegener <swegener@gentoo.org> SoQt-1.0.2.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  07 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> :
  Removed SoQt-20010601-r1.ebuild since it depends on a version of
  media-libs/coin that is no longer in portage.

  25 Feb 2004; Jason Wever <weeve@gentoo.org> SoQt-20010601-r1.ebuild: