@@ -6,13 +6,13 @@ DIST SoQt-1.3.0.tar.gz 1376284 RMD160 0c0689258b83e3c02dc83fa2536a9250e63daf47 S
 DIST SoQt-1.4.1.tar.gz 1706403 RMD160 5978543ff90db0943675bd3acf883849b42d3586 SHA1 bbbb4eedf308fa4ea46bb20700cb5bbdc39fe85f SHA256 741449af3619a60995d27838d94b8a77e6f8bedf00d6fd3745a8d15cbaaea1ea
 EBUILD SoQt-1.0.2.ebuild 636 RMD160 87e8a8aae147f94934e4e13a482f9e55ae5027dd SHA1 065189c7503a014fb05052632e0e5fdd1c95af06 SHA256 cf5beb4e3e420f8d3e65d588aaaad7c6c251ce8a5ce7f5f04b738032f2d03aef
 EBUILD SoQt-1.3.0.ebuild 787 RMD160 71ec5683ca9fd731f8a2c72526c0c84c4d0b78a4 SHA1 3db8be779a6d6bc467da1ad94cc18024eb3a73e1 SHA256 b77f38d22ed1a68e608c3369ecfb60689951a295f8a03734320709e5e8734801
-EBUILD SoQt-1.4.1.ebuild 787 RMD160 37739d32e45e7606f01f20965931223c14a6a962 SHA1 7c0f3b7a121d956637123ef7cc6c34025c9185c6 SHA256 0702f09a2b42811ded7fc669976bc5fb9abfc41d827006308cba438d728d9708
-MISC ChangeLog 2654 RMD160 b45461d3a06809b05b263ab2d4975417e6d75b02 SHA1 a5ae0872b6f1a779a8433badabb2491d23164404 SHA256 64414e58be6b9a89916d348cfe936acacd22a95a4e7138750bb1ce597a309b2f
+EBUILD SoQt-1.4.1.ebuild 1154 RMD160 80519dfb8bc8ece0e1422d4b1c402a700ffac247 SHA1 841ff2cf5ec20d349da7b88fe7d9bd2b6867728c SHA256 2578a915a519b7f1d69338635243406906380fff4cc0e4baf6bdcc5f160aef58
+MISC ChangeLog 2769 RMD160 8c9ed9c6abad3ca7b31ef192a1b38d390da4d85e SHA1 9ec84b84d330f2c0fa15751d31f5eb74f38df97f SHA256 e40b40947935a457440af7e4cfd66b3c58ba92f3af9d8006cae3af6aec9cb211
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAklGqmsACgkQKhnDs22gwa/QUwCdEM8Ap+Z3Ja0VYy4G8AgaJIby
-vLQAoJTHLg8QJoqAwLy0EcuLnSCS8Svb
-=etIY
+iEYEARECAAYFAkneUoQACgkQmOfEJZHYOKfI5ACgzi901rPQuloByXqPDW9TKjPq
+nOAAn0xwYh2o+v7Gmlu+grcNDeiQxymC
+=CWhK
 -----END PGP SIGNATURE-----
