@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/SoQt
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/SoQt/ChangeLog,v 1.19 2008/12/15 19:05:06 angelos Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/SoQt/ChangeLog,v 1.20 2009/04/09 19:54:32 tester Exp $
+
+  09 Apr 2009; Olivier Crête <tester@gentoo.org> SoQt-1.4.1.ebuild:
+  Add Qt4 support with patch from bug #202226
 
   15 Dec 2008; Christoph Mende <angelos@gentoo.org> SoQt-1.0.2.ebuild,
   SoQt-1.3.0.ebuild, SoQt-1.4.1.ebuild:
